@@ -13,11 +13,13 @@
     <script src="../script/script.js"></script>
 </head>
 <body>
+    <div class="nav" id="navEmpty"><a href='../' class="button">Retour à la carte</a></div>
     <div class="form">
+        <div class="title"><h1>Connexion</h1></div>
         <input type="text" name="username" id="name" placeholder="Login">
         <input type="password" name="pass" id="pass" placeholder="Mot de passe">
         <input type="button" value="Se connecter" name="connexion" id="connexion">
-        <a href="../inscription/"><input type="button" value="Je n'ai pas de compte" name="log"></a>
+        <a href="../inscription/">Je n'ai pas de compte</a>
     </div>
     <script src="../script/connexion.js"></script>
 </body>
