@@ -13,10 +13,10 @@
     <script src="../script/script.js"></script>
 </head>
 <body>
-    <div class="nav" id="nav"><a href='../'>Retour à la carte</a></div>
+    <div class="nav" id="nav"><a href='../' class="button">Retour à la carte</a></div>
     <div class="reserv">
-        <h1>Reserver un rendez-vous</h1>
         <div class="form">
+            <div class="title"><h1>Reserver un rendez-vous</h1></div>
             <p>Choisissez la date qui vous correspondra le mieux (Incrémentations de 20 minutes)</p>
             <input type="datetime-local" name="" id="date">
             <input type="button" value="Reserver">
