@@ -1,5 +1,5 @@
-if (typeof sessionStorage.getItem("connecte") != 'undefined' && sessionStorage.getItem("connecte") == true) {
-    window.location.href = "connexion/";
+if (typeof sessionStorage.getItem("connecte") != 'undefined' || sessionStorage.getItem("connecte") == true) {
+    window.location.href = "../";
 }
 $(document).ready(function() {
     $("#date").val(new Date().toISOString().slice(0,new Date().toISOString().lastIndexOf(":")));
