@@ -1,1 +1,89 @@
-#map { height: 900px; }
+body {
+    background-color: #ecfcfc;
+}
+
+#map { 
+    height: 700px; 
+    border-radius: 15px;
+}
+
+.nav {
+    background-color: rgb(26, 131, 180);
+    display: flex;
+    flex-direction: row;
+    border-radius: 25px;
+    height: auto;
+    margin: 0.1%;
+    padding: 1.5%
+}
+
+.nav span {
+    background-color: rgb(120, 191, 224);
+    margin: 0 1% 0 1%;
+    padding: 0.4% 1% 0.1% 1%;
+    border-radius: 5px;
+}
+
+.title {
+    border-bottom: 1px solid #333;
+    margin-bottom: 5%;
+    width: 100%;
+    text-align: center;
+}
+
+.form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 1% 25% 10% 25%;
+    padding: 2% 10% 2% 10%;
+    border-radius: 25px;
+    background-color: #ffffff;
+}
+
+.form input[type=text], .form input[type=password] {
+    border-radius: 5px;
+    margin: auto;
+    margin-bottom: 4%;
+    padding: 1% 15% 1% 15%;
+    text-align: center;
+    border-color: #a5a5a5;
+    background-color: #ffffff;
+}
+
+.form input[type=button], .form a {
+    border-radius: 5px;
+    margin: auto;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    padding: 0.5% 5% 0.5% 5%;
+    text-align: center;
+    border: none;
+    background-color: #eeeeee;
+    color: #333;
+    transition: background-color 0.3s ease;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.nav a {
+    margin: 0 1% 0 1%;
+    cursor: pointer;
+}
+
+a.button {
+    padding: 8px 16px;
+    background-color: #eeeeee;
+    color: #333;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.button:hover, .form input[type=button]:hover, .form a:hover  {
+    background-color: #ffbb00f6;
+}
